# vslidar

./: README.md
CAD/: Dynamixel_holder_1.sldprt  Dynamixel_holder_2.sldprt  LIDAR_horizontal_mount.SLDPRT  LIDAR_stand.SLDPRT  Nucleo144_Mount.SLDPRT  XV11_LidarMount.SLDPRT  aruco_marker_holder.SLDPRT  dynamixel_ax12_holder.SLDPRT
CAD/roomba/: aluminum_square_tube.SLDPRT  roomba_asm.SLDASM  roomba_asm.SLDDRW  roomba_base.SLDPRT  roomba_lower_bracket.SLDPRT  roomba_lower_bracket_no_angle.SLDPRT  roomba_platform.SLDPRT
ROS/catkin_ws/: .gitignore  README.md
ROS/catkin_ws/src/: .rosinstall  .rosinstall.bak
ROS/catkin_ws/src/aruco_mapping/msg/: ArucoMarker.msg
ROS/catkin_ws/src/aruco_mapping/src/: aruco_mapping.cpp
ROS/catkin_ws/src/system_tests/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/system_tests/launch/: robot_motion_test.launch
ROS/catkin_ws/src/system_tests/src/: robot_motion_test_node.cpp
ROS/catkin_ws/src/vslidar_autonomy/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/vslidar_autonomy/config/: base_local_planner_params.yaml  cloud_coverage_metrics_config.yaml  cloud_filter_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml.save  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params.yaml.save  ukf_imu_odom_params.yaml  vslidar_cartographer_config.lua
ROS/catkin_ws/src/vslidar_autonomy/config/camera_calib/: chromebook_builtin_camera_calib.yaml  chromebook_webcam_720p.ini  chromebook_webcam_720p.yaml  genius_webcam_calib.ini  genius_webcam_calib.yaml
ROS/catkin_ws/src/vslidar_autonomy/launch/: camera_calib.launch  ukf_test.launch  vslidar_autonomy.launch
ROS/catkin_ws/src/vslidar_autonomy/maps/: duckering_152.pgm  duckering_152.yaml
ROS/catkin_ws/src/xv11_multi_lidar/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/xv11_multi_lidar/include/: covariance_matrix.h
ROS/catkin_ws/src/xv11_multi_lidar/launch/: web_interface.launch  xv11_multi_lidar.launch
ROS/catkin_ws/src/xv11_multi_lidar/src/: aruco_pose_repack_node.cpp  cloud2obstaclemap_node.cpp  cloud_accumulator_node.cpp  cloud_cluster_metrics_node.cpp  cloud_coverage_metrics_node.cpp  icp_node.cpp  odom_to_map_tf_node.cpp  scan2cloud_node.cpp  var_scan_test_node.cpp  xv11_raw2imu_node.cpp  xv11_raw2scan_wtf_node.cpp
ROS/catkin_ws/src/xv11_multi_lidar/www/: index.html
ROS/catkin_ws/src/xv11_multi_lidar/www/js/: pan_param_pub.js
eagle/xv11_controller/: eagle.epf  xv11_controller.b#1  xv11_controller.b#2  xv11_controller.b#3  xv11_controller.b#4  xv11_controller.b#5  xv11_controller.b#6  xv11_controller.b#7  xv11_controller.b#8  xv11_controller.b#9  xv11_controller.brd  xv11_controller.s#1  xv11_controller.s#2  xv11_controller.s#4  xv11_controller.s#5  xv11_controller.s#7  xv11_controller.s#8  xv11_controller.s#9  xv11_controller.sch
eagle/xv11_nucleo_shield/: Nucleo-144.l#1  Nucleo-144.l#2  Nucleo-144.l#3  Nucleo-144.l#4  Nucleo-144.l#5  Nucleo-144.l#6  Nucleo-144.l#7  Nucleo-144.l#8  Nucleo-144.l#9  Nucleo-144.lbr  eagle.epf  xv11_nucleo_shield.b#1  xv11_nucleo_shield.b#2  xv11_nucleo_shield.b#3  xv11_nucleo_shield.b#4  xv11_nucleo_shield.b#5  xv11_nucleo_shield.b#6  xv11_nucleo_shield.b#7  xv11_nucleo_shield.b#8  xv11_nucleo_shield.b#9  xv11_nucleo_shield.brd  xv11_nucleo_shield.s#1  xv11_nucleo_shield.s#2  xv11_nucleo_shield.s#3  xv11_nucleo_shield.s#4  xv11_nucleo_shield.s#5  xv11_nucleo_shield.s#6  xv11_nucleo_shield.s#7  xv11_nucleo_shield.s#8  xv11_nucleo_shield.s#9  xv11_nucleo_shield.sch
