<?xml version="1.0"?>
<package>
  <name>xv11_multi_lidar</name>
  <version>1.0.0</version>
  <description>This package is a driver for the multi-lidar system.</description>
  <maintainer email="ryker.dial@gmail.com">Ryker Dial</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry2</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry2</run_depend>

</package>